# Santorini-Earthquake-Monitor

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
src/: app.py
