[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "santorini-earthquake-monitor"
version = "0.0.1"
authors = [
  { name="Sotiris Gkouzias"},
]
description = "A Streamlit-based application for visualizing and analyzing real-time earthquake data near Santorini."
readme = "README.md"
requires-python = ">=3.10"

[project.dependencies] 
pandas = "2.2.3"
numpy = "2.0.2"
matplotlib = "3.10.0"
beautifulsoup4 = "4.12.3"
plotly = "6.0.0"
requests = "2.32.3"
streamlit = "1.42.0"

[tool.setuptools]
packages = ["src"] 

[project.scripts]
make_dashboard = "src.app:main"
