[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "santorini-earthquake-monitor"
version = "0.0.1"
authors = [
  { name="Sotiris Gkouzias"},
]
description = "A Streamlit-based application for visualizing and analyzing real-time earthquake data near Santorini."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "beautifulsoup4",
    "plotly",
    "requests",
    "streamlit"
]

[tool.setuptools]
packages = ["src"] 

[tool.poetry]
package-mode = false

[project.scripts]
make_dashboard = "src.app:main"

